--- a/app/package.json
+++ b/app/package.json
@@ -21,8 +21,14 @@
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "bootstrap": "^5.0.0-beta3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.16.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
