--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "8080:80"
     volumes:
       - ./src:/var/www/html:delegated
+      - ./src/vendor:/var/www/html/vendor/
     depends_on:
       - php
       - mysql
